[package]
authors.workspace = true
description = "Integration for YubiHSM2 devices as Signstar backend"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "signstar-yubihsm2"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
serde = { workspace = true, optional = true }
signstar-crypto = { version = "0.1.0", path = "../signstar-crypto" }

[features]
default = ["serde"]
serde = ["dep:serde"]

[lints]
workspace = true

[dev-dependencies]
testresult.workspace = true
