[package]
authors.workspace = true
description = "Integration for YubiHSM2 devices as Signstar backend"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "signstar-yubihsm2"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_repr = { version = "0.1.20", optional = true }
signstar-common = { workspace = true, features = ["logging"] }
signstar-crypto.workspace = true
thiserror.workspace = true
yubihsm = { version = "0.42.1", features = ["usb"] }

[dev-dependencies]
rstest.workspace = true
testresult.workspace = true

[features]
_yubihsm2-mockhsm = ["yubihsm/mockhsm"]
cli = ["dep:clap", "dep:clap-verbosity-flag", "serde"]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_repr"]

[lints]
workspace = true

[[bin]]
name = "signstar-yubihsm"
path = "src/main.rs"
required-features = ["cli"]
