[package]
authors.workspace = true
description = "Integration for YubiHSM2 devices as Signstar backend"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "signstar-yubihsm2"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
aes = "0.8.4"
base64ct.workspace = true
ccm = { version = "0.5.0", features = ["std"] }
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
curve25519-dalek = "4.1.3"
ed25519-dalek = { features = ["hazmat"], workspace = true }
log.workspace = true
num_enum.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_repr = { version = "0.1.20", optional = true }
signstar-common = { workspace = true, features = ["logging"] }
signstar-crypto.workspace = true
strum.workspace = true
thiserror.workspace = true
yubihsm = { version = "0.42.1", features = ["usb"] }

[dev-dependencies]
rstest.workspace = true
testresult.workspace = true

[features]
_yubihsm2-mockhsm = ["yubihsm/mockhsm"]
cli = ["dep:clap", "dep:clap-verbosity-flag", "serde"]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:serde_repr"]

[lints]
workspace = true

[[bin]]
name = "signstar-yubihsm"
path = "src/main.rs"
required-features = ["cli"]
